Fix icon orientation for left-aligned overview, decrease icon size, change map icon to fa-regular

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/overview.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/overview.scss
@@ -1,6 +1,8 @@
 $panelBorderColor: #888 !default;
 
 .mb-element-overview {
+  --size-close-button: 28px;
+
   user-select: none;
   position: relative; // For .toggleOverview absolute
 
@@ -8,15 +10,21 @@ $panelBorderColor: #888 !default;
     position: absolute;
     padding: 5px;
     border-radius: var(--radius-md) 0 0 var(--radius-md);
-    width: 33.4px;
-    height: 33.4px;
+    width: var(--size-close-button);
+    height: var(--size-close-button);
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 
+    .anchored-element-wrap-lt &, .anchored-element-wrap-lb & {
+        border-radius: 0 var(--radius-md) var(--radius-md) 0;
+    }
+
     &.closed {
       border-radius: var(--radius-md);
+      width: 33.4px;
+      height: 33.4px;
     }
   }
 
@@ -59,19 +67,19 @@ $panelBorderColor: #888 !default;
   }
   .anchored-element-wrap-rt  & .toggleOverview {
     top: 0;
-    left: -2.25em;
+    left: calc(-1 * var(--size-close-button));
   }
   .anchored-element-wrap-lt & .toggleOverview {
     top: 0;
-    right: -2.25em;
+    right: calc(-1 * var(--size-close-button));
   }
   .anchored-element-wrap-rb & .toggleOverview {
     bottom: 1px;
-    left: -2.55em;
+    left: calc(-1 * var(--size-close-button));
   }
   .anchored-element-wrap-lb & .toggleOverview {
     bottom: 0;
-    right: -2.25em;
+    right: calc(-1 * var(--size-close-button));
   }
   .anchored-element-wrap-lb &, .anchored-element-wrap-rb & {
     vertical-align: bottom;
